@@ -487,6 +487,34 @@ argument_list|)
 expr_stmt|;
 name|assertU
 argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"58"
+argument_list|,
+literal|"text-query0"
+argument_list|,
+literal|"HELLO"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"59"
+argument_list|,
+literal|"text-query0"
+argument_list|,
+literal|"hello"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
 name|commit
 argument_list|()
 argument_list|)
@@ -2061,6 +2089,36 @@ literal|"BAR*"
 argument_list|)
 argument_list|,
 literal|"/response/numFound==0"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testQueryAnalyzerIsUsed
+specifier|public
+name|void
+name|testQueryAnalyzerIsUsed
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// this should only match one doc, which was lower cased before being added
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"defType"
+argument_list|,
+literal|"simple"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"text-query0"
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"HELLO"
+argument_list|)
+argument_list|,
+literal|"/response/numFound==1"
 argument_list|)
 expr_stmt|;
 block|}
